# tasks-hyperpolyglot

./: .gitignore  README.md
Find pair with given sum in the array/: task.js  task.py
array/: README.md
array/additional/: README.md
array/subarrays/: CMakeLists.txt  README.md  consecutive_integers.h  findsubarrays.h  getzerosumsubarrays_naive.h  getzerosumsubarrays_opt.h  main.cpp  reverse_consecutive_subarray.h  subarray.h  tst_check_subarr_0_sum.h  zerosumsubarray.h
backtracking/: README.md
bintree-bst-trie/: README.md
bits/: README.md
bits/01_basic_hacks/basic_binary_hacks/: CMakeLists.txt  main.cpp
bits/add/: README.md
dynamic-programming/: README.md
graph/: README.md
heap/: README.md
linked-list/: README.md
matrix/: README.md
puzzles/: README.md
recursion-hashing-greedy/: README.md
sort-search-divide-n-conquer/: README.md
stack-queue/: README.md
string/: README.md
